--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   }
 }
